Changes for Nic's comments on 3/3/22

--- a/index/01-chap1.Rmd
+++ b/index/01-chap1.Rmd
@@ -61,7 +61,7 @@ Constantinescu A. E., Bull C. J., **Goudswaard L. J.**, Zheng J., Elsworth B., T
 
 **IEU Scientific Advisory Board meeting**, 2020, Bristol, UK. Title: Effect of adiposity on the human plasma proteome: a Mendelian randomisation study using individual level data (Poster).
 
-**International Genetic Epidemiological Society meeting**, 2020, Virtual conference. Title: Effects of body mass index on the human proteome: a Mendelian randomization study using individual level data (Selected for short talk as one of the top ranked posters).
+**International Genetic Epidemiological Society meeting**, 2020, Virtual conference. Title: Effects of body mass index on the human proteome: a Mendelian randomisation study using individual level data (Selected for short talk as one of the top ranked posters).
 
 **International Society of Thrombosis and Haemostasis meeting**, 2020, Virtual conference. Title: Effects of body mass index on the human plasma proteome – potential drivers of obesity-related cardiovascular disease? (Poster). 
 
@@ -69,15 +69,15 @@ Constantinescu A. E., Bull C. J., **Goudswaard L. J.**, Zheng J., Elsworth B., T
 
 **Platelet Society meeting**, 2021, Virtual conference. Title: Estimating the causal association between body mass index and platelet properties: evidence for a positive association with immature platelet count (Poster)
 
-**British Heart Foundation PhD Student Conference**, 2021, Virtual conference. Title: Estimating the association of body mass index and platelet properties: an observational and Mendelian randomization study (Poster)
+**British Heart Foundation PhD Student Conference**, 2021, Virtual conference. Title: Estimating the association of body mass index and platelet properties: an observational and Mendelian randomisation study (Poster)
 
 **International Society of Thrombosis and Haemostasis meeting**, 2021, Virtual conference. Title: Altered platelet proteome and platelet-leukocyte interactions in patients with COVID-19 (Oral presentation, presented by Prof Hers)
 
 **International Society of Thrombosis and Haemostasis meeting**, 2021, Virtual conference. Title: Estimating the causal association between body mass index and platelet properties: evidence for a positive association with immature platelet count (Oral presentation and Travel Award)
 
-**World Congress of Epidemiology**, 2021, Virtual conference. Title: Effects of adiposity on the human proteome: Mendelian randomization study using individual-level data (Oral presentation)
+**World Congress of Epidemiology**, 2021, Virtual conference. Title: Effects of adiposity on the human proteome: Mendelian randomisation study using individual-level data (Oral presentation)
 
-**International Genetic Epidemiology Society**, 2021, Virtual conference. Title: Combining Mendelian randomization and randomized control trial study designs to determine effects of adiposity on the plasma proteome (Oral presentation for shortlisted posters)
+**International Genetic Epidemiology Society**, 2021, Virtual conference. Title: Combining Mendelian randomisation and randomized controlled trial study designs to determine effects of adiposity on the plasma proteome (Oral presentation for shortlisted posters)
 
 **Elizabeth Blackwell Institute Mechanisms to Populations**, 2021, Virtual meeting. Title: Exploring the effect of BMI on platelet function: an interdisciplinary study (Oral presentation)
 
