--- a/index/02-chap2.Rmd
+++ b/index/02-chap2.Rmd
@@ -38,18 +38,18 @@ Although body fatness (adiposity) has long been associated with adverse health, 
 Diseases affecting the heart and blood vessels are the major cause of mortality in many countries[@BritishHeartFoundation2021]. In 2019, global deaths from coronary heart disease (CHD) and stroke amounted to ~9 million and ~6.5 million deaths, respectively[@BritishHeartFoundation2021]. Current known risk factors for such diseases include smoking, physical inactivity, poor diet and high cholesterol[@Virani2021]. Overweight and obesity are also well established risk factors for such diseases and are now considered the leading years lived with disability and injury risk factors in the United States[@Virani2021]. Various studies have found a link between adiposity and cardiovascular risk through various study designs. For example, large observational studies have found that adults with overweight or obesity have a higher risk of cardiovascular events and death from cardiovascular disease[@Khan2018]. Another study found that an average increase in BMI of 4 kg/m^2^ across a population increased the odds of ischaemic heart disease by 20-30%[@Nordestgaard2012]. 
 
 ## Mendelian randomisation can be used to explore causality
-Risk factors have often been identified through observational associations. Observational studies are often limited by bias, confounding and reverse causation[@Davies2018]. Mendelian randomisation (MR) is a technique which exploits the random assortment of alleles to estimate the causal association between a modifiable risk factor and disease outcomes. It can be likened to a natural randomised control trial (RCT)[@Gill2020]. This technique is widely implemented due to the availability of genetic data in large cohorts, such as in ~500,000 UK Biobank participants[@Bycroft2018]. An example of how MR and RCTs can be used to determine causality is shown in Figure \@ref(fig:MR-CVevent), using BMI and cardiovascular events as an example[@Doney2009]. Here, genotypes that are associated with BMI can be used. These genotypes should only be associated with BMI and not other confounding factors. If people with genotypes which are associated with higher BMI also have higher rates of cardiovascular events, it is likely that the relationship between BMI and cardiovascular events is causal. Although a useful technique in exploring causality, MR has its own biases and limitations, therefore other lines of evidence and study designs such as RCTs are required. In an RCT, if a weight loss intervention reduces BMI compared to the control group, and also reduces the rate of cardiovascular events, this also supports a causal role of BMI in the onset of cardiovascular events. The RCT is considered gold standard in understanding causality, however these trials are expensive and take a long time due to the time needed to follow up participants.
+Risk factors have often been identified through observational associations. Observational studies are often limited by bias, confounding and reverse causation[@Davies2018]. Mendelian randomisation (MR) is a technique which exploits the random assortment of alleles to estimate the causal association between a modifiable risk factor and disease outcomes. It can be likened to a natural randomised controlled trial (RCT)[@Gill2020]. This technique is widely implemented due to the availability of genetic data in large cohorts, such as in ~500,000 UK Biobank participants[@Bycroft2018]. An example of how MR and RCTs can be used to determine causality is shown in Figure \@ref(fig:MR-CVevent), using BMI and cardiovascular events as an example[@Doney2009]. Here, genotypes that are associated with BMI can be used. These genotypes should only be associated with BMI and not other confounding factors. If people with genotypes which are associated with higher BMI also have higher rates of cardiovascular events, it is likely that the relationship between BMI and cardiovascular events is causal. Although a useful technique in exploring causality, MR has its own biases and limitations, therefore other lines of evidence and study designs such as RCTs are required. In an RCT, if a weight loss intervention reduces BMI compared to the control group, and also reduces the rate of cardiovascular events, this also supports a causal role of BMI in the onset of cardiovascular events. The RCT is considered gold standard in understanding causality, however these trials are expensive and take a long time due to the time needed to follow up participants.
 
-(ref:scaption-MR-CVevent) Mendelian randomisation and randomised control trial example using body mass index and cardiovascular events
+(ref:scaption-MR-CVevent) Mendelian randomisation and randomised controlled trial example using body mass index and cardiovascular events
 
-(ref:caption-MR-CVevent) **Example of how Mendelian randomisation and a randomised control trial can be used to determine whether higher BMI increases the risk of cardiovascular events**. Figure made using BioRender.com.
+(ref:caption-MR-CVevent) **Example of how Mendelian randomisation and a randomised controlled trial can be used to determine whether higher BMI increases the risk of cardiovascular events**. Figure made using BioRender.com.
 
 ```{r MR-CVevent, echo = FALSE, fig.cap="(ref:caption-MR-CVevent)", fig.align = "center", fig.scap="(ref:scaption-MR-CVevent)"}
 include_graphics(path = "figure/Intro_background/BMI_MR_RCT_CVevent.png", dpi = NA)
 ```
 
 ## The genetics of obesity
-As indicated above, Mendelian randomization can be used to estimate the causal relationship of BMI on various outcomes. There are strong correlations between BMI and more direct measures of fat mass measured by dual-energy X-ray absorptiometry (DXA)[@Bell2018], such as total fat mass index and regional fat mass indices. Due to the specialised equipment needed for fat mass measures, BMI is often much more widely available within cohort studies, trials and in the clinic. Environmental factors are well known to explain a large amount of variance in BMI, but genetic variants also influence BMI. Monogenic obesity was first identified where mutations in the ob (leptin) gene[@Zhang1994] lead to mice having obesity. This was later discovered to be because leptin was secreted by adipose tissue and was found to influence food consumption[@Friedman1998]. The first genome-wide association study (GWAS) for obesity traits was performed in 2007 for around 5,000 individuals[@Scuteri2007], which found evidence that 10 SNPs were associated with BMI. Since then, GWAS have been performed in increasingly larger cohort sizes[@Locke2015], with the largest and most recent GWAS performed in 2018 by Yengo et al.[@Yengo2018]. This GWAS found 941 near-independent genetic variants which associate with BMI. These have been shown to explain around 6% of the variance in BMI. Of these SNPs, 656 are considered as primary associations[@Yengo2018].
+As indicated above, Mendelian randomisation can be used to estimate the causal relationship of BMI on various outcomes. There are strong correlations between BMI and more direct measures of fat mass measured by dual-energy X-ray absorptiometry (DXA)[@Bell2018], such as total fat mass index and regional fat mass indices. Due to the specialised equipment needed for fat mass measures, BMI is often much more widely available within cohort studies, trials and in the clinic. Environmental factors are well known to explain a large amount of variance in BMI, but genetic variants also influence BMI. Monogenic obesity was first identified where mutations in the ob (leptin) gene[@Zhang1994] lead to mice having obesity. This was later discovered to be because leptin was secreted by adipose tissue and was found to influence food consumption[@Friedman1998]. The first genome-wide association study (GWAS) for obesity traits was performed in 2007 for around 5,000 individuals[@Scuteri2007], which found evidence that 10 SNPs were associated with BMI. Since then, GWAS have been performed in increasingly larger cohort sizes[@Locke2015], with the largest and most recent GWAS performed in 2018 by Yengo et al.[@Yengo2018]. This GWAS found 941 near-independent genetic variants which associate with BMI. These have been shown to explain around 6% of the variance in BMI. Of these SNPs, 656 are considered as primary associations[@Yengo2018].
 
 ## Types of CVD
 As indicated in section \@ref(CVD-stats), CHD and stroke affect millions of people worldwide every year. CVD is used as a term to describe the group of diseases which affect the heart or blood vessels. Within CVD there are various diseases which range in their clinical presentation and pathology. CHD (also known as coronary artery disease (CAD) or ischaemic heart disease (IHD)) is caused by a build up of plaques in the arteries (atherosclerosis). These plaques are caused by low density lipoproteins (LDLs) accumulating in the intima of the arteries, where they undergo oxidation[@Bentzon2014]. This then activates immune response and macrophages and lymphocytes also accumulate within the intima[@Badimon2012]. The plaques build in size and may eventually rupture the endothelium, initiating platelet activation and thrombus formation (arterial thrombosis, Figure \@ref(fig:thrombi-cartoon)A), thereby causing a heart attack. Other types of CVD include stroke, which can be either ischaemic (another form of arterial thrombosis) or haemorrhagic. Arterial thrombi are estimated to be composed of 31% platelets[@Chernysh2020].
@@ -131,7 +131,7 @@ Recent studies have used large cohorts of people to identify SNPs which are asso
 Through literature searches, there is evidence for an association between BMI and chemokines such as MDC and TARC[@Kitahara2014]. Based on these observations, there may be many more circulating proteins which may be raised in obesity and have downstream effects on platelet function. Many studies so far have had hypothesis driven approaches when looking at the effect of BMI on circulating protein levels[@Timpson2011]. This is due to the often limited range of the number of proteins detected in laboratory assays, such as enzyme-linked immunosorbent assays (ELISAs). Recent technologies have now been developed which allow protein detection in unprecedented scope and detail, for example the SOMAscan by SomaLogic[@Gold2012]. This array can detect around 4000 unique proteins using SOMAmers (Slow Off-rate Modified Aptamers), that are specific for individual proteins and allow quantification using a DNA microarray. Studies that have attempted to characterise the plasma proteome of higher BMI have often only been in an observational framework[@Cominetti2018]. As the majority of druggable targets are proteins, it is valuable to explore the effects of BMI on circulating plasma proteins. It is estimated that 25% of proteins in the human proteome circulate in the blood[@Imming2006], including enzymes, cytokines and transport proteins. Therefore, focusing on effects of adiposity on the circulating proteome may allow for the development of or repurposing of therapeutic interventions to reduce obesity-related disease. To explore the link between BMI, circulating proteins and platelet function, the blood is the tissue of interest. Many studies have blood/plasma/serum samples analysed from participants, therefore enabling exploration of a range of blood measures.
 
 ## Importance of interdisciplinary methods
-To understand mechanisms of disease, various study designs are required. Each experimental approach used when testing hypotheses has biases and limitations. For example, using basic science it is possible to explore mechanistic effects _in vitro_, _in vivo_ or _ex vivo_, which is crucial. However, it is often difficult to fully understand how findings might translate in a clinical setting. Similarly, observational studies can provide useful clinical information, but these can generally only be used to identify correlation, not causation. Randomised control trials (RCTs) are considered the gold standard way to determine efficacy and causality, especially in drug trials, however these trials are often time consuming and expensive[@Bennett2017]. To overcome this issue, MR utilises genetic information to be able to provide causal estimates. MR is widely utilised since the cost of sequencing genomes has become more affordable. However, this technique requires large sample sizes and can also suffer from issues such as horizontal pleiotropy (where the genetic instrument affects the outcome through routes other than changes in the exposure). Therefore, a combination of laboratory experiments, observational clinical studies, RCTs and MR can therefore help to provide separate sources of evidence in investigating mechanisms of disease and can account for their separate limitations.
+To understand mechanisms of disease, various study designs are required. Each experimental approach used when testing hypotheses has biases and limitations. For example, using basic science it is possible to explore mechanistic effects _in vitro_, _in vivo_ or _ex vivo_, which is crucial. However, it is often difficult to fully understand how findings might translate in a clinical setting. Similarly, observational studies can provide useful clinical information, but these can generally only be used to identify correlation, not causation. Randomised controlled trials (RCTs) are considered the gold standard way to determine efficacy and causality, especially in drug trials, however these trials are often time consuming and expensive[@Bennett2017]. To overcome this issue, MR utilises genetic information to be able to provide causal estimates. MR is widely utilised since the cost of sequencing genomes has become more affordable. However, this technique requires large sample sizes and can also suffer from issues such as horizontal pleiotropy (where the genetic instrument affects the outcome through routes other than changes in the exposure). Therefore, a combination of laboratory experiments, observational clinical studies, RCTs and MR can therefore help to provide separate sources of evidence in investigating mechanisms of disease and can account for their separate limitations.
 
 ## Thesis aims 
 It is well established that patients with obesity have an increased risk of CVD, however, the underlying mechanism is still largely unknown. In this study I hypothesise that an increase in BMI alters the plasma proteome leading to enhanced platelet activity and CVD. To test this hypothesis, I will explore the relationship between BMI, the plasma proteome, platelets and CVD, using a multidisciplinary approach (Figure \@ref(fig:Thesis-schematic)).
@@ -156,6 +156,6 @@ To address the thesis aims, there will be six results chapters in this thesis:
 1) Using observational and MR frameworks to determine the effect of body mass index on platelet characteristics (Chapter \@ref(BMI-platelets-INTERVAL))
 2) The effect of obesity on platelet function: a clinical pilot study (Chapter \@ref(BMI-platelets-clinic))
 3) Pathways linking plasma proteins and platelet function: do the chemokines MDC and TARC play a role? (Chapter \@ref(chemokine-platelets))
-4) Exploring the plasma proteome as a link between adiposity and platelet function: Observational and Mendelian randomization estimates (Chapter \@ref(BMI-protein-MR))
+4) Exploring the plasma proteome as a link between adiposity and platelet function: Observational and Mendelian randomisation estimates (Chapter \@ref(BMI-protein-MR))
 5) Further elucidating the effect of adiposity on the plasma proteome using a weight loss intervention (Chapter \@ref(BMI-protein-RCT))
 6) Combining MR and an RCT to determine effects of adiposity on the plasma proteome. (Chapter \@ref(Comparison-proteome))
