--- a/index/05-chap5.Rmd
+++ b/index/05-chap5.Rmd
@@ -44,7 +44,7 @@ As blood/plasma levels of MDC have been reported to be elevated in obese people[
 The aims of this chapter are therefore to:
 
 1) Determine the effects and mechanisms of MDC and TARC on platelet function and signalling.
-2) Explore the effect of increasing levels of MDC and TARC on disease using two sample Mendelian randomization.
+2) Explore the effect of increasing levels of MDC and TARC on disease using two sample Mendelian randomisation.
 
 Figure \@ref(fig:chemokine-platelet-graphic) indicates the parts of the overal thesis hypthoses which are addressed in the current chapter.
 
@@ -87,7 +87,7 @@ Fura-2 (4 µM) was added to PRP after the addition of indomethacin and apyrase a
 Data was analysed using GraphPad Prism 8. If data displayed a normal distribution (based on Shapiro-Wilk p-value and W statistic), a parametric test was used (e.g. unpaired t-test or one way ANOVA), otherwise a nonparametric test was used. Concentration-response curves were plotted using a four parameter variable slope. To compare concentration-response curve parameters, pEC50s or curve maxes were compared. A Fisher's exact test was used to compare proportions of categorical variables. Statistical tests used for each experiment are in figure legends. Strength of evidence is determined by p-values, however results will not be dichotomised as either 'significant' or 'not significant'[@Sterne2001]. 
 
 ### Two sample MR look-up using EpigrahDB
-Mendelian randomization is a method which uses genetic variants as instrumental variables to provide a causal estimate of the relationship between a modifiable exposure and health outcome[@Davies2018]. Two sample MR uses summary statistics and allows for causal effects to be estimated where the exposure and outcome are measured in different populations[@Davies2018]. EpigraphDB is a tool which performs two sample MR to determine how the human proteome contributes to complex diseases[@Zheng2020]. Protein quantitative trait loci (pQTLs) were available for MDC and TARC from the INTERVAL study (N=3301), which were rank normal transformed[@Sun2018]. Therefore a systematic exploration of the possible roles of MDC and TARC in disease was performed. These SNPs were associated with these proteins at p<5x10^-8^. GWAS summary statistics that were publically available for disease outcomes were included. A list of the available outcomes are presented on EpigraphDB https://www.epigraphdb.org/pqtl/list/outcomes. As an example, the venous thromboembolism variables were from Neale lab: https://github.com/Nealelab/UK_Biobank_GWAS). The venous thromboembolism (VTE) units are derived from a case/control linear mixed model. For MDC, there was one instrument available, therefore a Wald ratio was used to estimate the causal effect[@Lawlor2008]. There were two instruments available for TARC, therefore the inverse variance weighted (IVW) method was used, which assumes all genetic variants are valid instrumental variables[@Burgess2013]. The pQTLs used were trans pQTLs(located >500 kb from the leading pQTL). The instruments used were categorised as Tier 1 instruments, which passed both pleiotropy and consistency tests[@Zheng2020]. As a total of 225 outcomes were searched, a Bonferroni-adjusted p-value of 0.05/225 = 2.2x10^-4^ was utilised to account for multiple testing.
+Mendelian randomisation is a method which uses genetic variants as instrumental variables to provide a causal estimate of the relationship between a modifiable exposure and health outcome[@Davies2018]. Two sample MR uses summary statistics and allows for causal effects to be estimated where the exposure and outcome are measured in different populations[@Davies2018]. EpigraphDB is a tool which performs two sample MR to determine how the human proteome contributes to complex diseases[@Zheng2020]. Protein quantitative trait loci (pQTLs) were available for MDC and TARC from the INTERVAL study (N=3301), which were rank normal transformed[@Sun2018]. Therefore a systematic exploration of the possible roles of MDC and TARC in disease was performed. These SNPs were associated with these proteins at p<5x10^-8^. GWAS summary statistics that were publically available for disease outcomes were included. A list of the available outcomes are presented on EpigraphDB https://www.epigraphdb.org/pqtl/list/outcomes. As an example, the venous thromboembolism variables were from Neale lab: https://github.com/Nealelab/UK_Biobank_GWAS). The venous thromboembolism (VTE) units are derived from a case/control linear mixed model. For MDC, there was one instrument available, therefore a Wald ratio was used to estimate the causal effect[@Lawlor2008]. There were two instruments available for TARC, therefore the inverse variance weighted (IVW) method was used, which assumes all genetic variants are valid instrumental variables[@Burgess2013]. The pQTLs used were trans pQTLs(located >500 kb from the leading pQTL). The instruments used were categorised as Tier 1 instruments, which passed both pleiotropy and consistency tests[@Zheng2020]. As a total of 225 outcomes were searched, a Bonferroni-adjusted p-value of 0.05/225 = 2.2x10^-4^ was utilised to account for multiple testing.
 
 ## Results
 
@@ -231,7 +231,7 @@ include_graphics(path = "figure/Chemokines/Layouts/MDC_inhibitors_aggregation_tr
 
 To estimate potential causal relationships bewteen circulating levels of MDC and TARC and disease, a two sample MR was performed using pQTL data for these chemokines and available disease outcome data. Results are displayed for estimates where p<0.05, however due to multiple testing, the p-value threshold was adjusted to 2.2x10^-4^. Results are presented as the change in outcome per SD higher protein. There was evidence from the Wald ratio MR that higher MDC had a causal effect on three outcomes: high cholesterol (Effect size = 0.22 SD, SE = 0.02, p=2.2x10^-26^), DVT (Effect size = 0.22, SE 0.021, p=2.2x10^-26^) and pulmonary embolism (Effect size = 0.33, SE 0.08, p=2.0x10^-5^). There was not strong evidence for an effect of higher levels of TARC on any of the included outcomes. Results of the two sample MR are shown for MDC and TARC in tables \@ref(tab:MDC-disease-MR) and \@ref(tab:TARC-disease-MR).
 
-(ref:caption-MDC-disease-MR) Estimates for the effect of MDC on disease outcomes using two sample Mendelian randomization
+(ref:caption-MDC-disease-MR) Estimates for the effect of MDC on disease outcomes using two sample Mendelian randomisation
 ```{r MDC-disease-MR,  echo=FALSE}
 options(knitr.kable.NA = "")
 V = c("MDC/CCL22", "MDC/CCL22","MDC/CCL22","MDC/CCL22","MDC/CCL22","MDC/CCL22","MDC/CCL22","MDC/CCL22","MDC/CCL22","MDC/CCL22","MDC/CCL22","MDC/CCL22","MDC/CCL22","MDC/CCL22","MDC/CCL22","MDC/CCL22","MDC/CCL22","MDC/CCL22","MDC/CCL22")
@@ -251,7 +251,7 @@ mytable %>% kable(caption = "(ref:caption-MDC-disease-MR)", booktabs = TRUE) %>%
   landscape()
 ```
 
-(ref:caption-TARC-disease-MR) Estimates for the effect of TARC on disease outcomes using two sample Mendelian randomization
+(ref:caption-TARC-disease-MR) Estimates for the effect of TARC on disease outcomes using two sample Mendelian randomisation
 ```{r TARC-disease-MR,  echo=FALSE}
 options(knitr.kable.NA = "")
 V = c("TARC/CCL17", "TARC/CCL17", "TARC/CCL17", "TARC/CCL17", "TARC/CCL17", "TARC/CCL17")
@@ -282,7 +282,7 @@ As well as functional effects, this chapter aimed to assess whether effects are 
 
 MDC and TARC have been implicated in CVD such as atherosclerosis[@Weber2004], but experiments focusing on the effect of MDC and TARC on platelet function have not used genetic epidemiology to explore whether genetic variants which lead to alterations in the levels of circulating MDC and TARC in the plasma are associated with an increased risk of disease. As MDC and TARC can activate platelets, the effect of MDC and TARC on disease was explored using two sample MR. The SNP that was associated with levels of MDC, rs77542162, was also associated with increased risk of DVT and pulmonary embolism. This effect may occur due to increased platelet priming by higher levels of MDC. Patients at risk of developing VTE have a hypercoagulant state and are prescribed anticoagulants to reduce the risk. Experiments indicated that MDC could not potentiate PS exposure, a marker of coagulation, therefore suggesting that MDC does not increaes the risk through an increase in coagulation. Further experiments are required to determine how MDC could mediate the risk of VTE. Despite the evidence for a causal effect, it is possible that this SNP could affect the outcome through routes other than through the exposure (horizontal pleiotropy). For example, the SNP could also be associated with increased in number of red blood cells, thereby increased risk of VTE. This is also reflected by other outcomes being related to increased levels of MDC such as forced vital capacity (FVC). As there is only one SNP, sensitivity analyses cannot be performed to test this. Further analyses such as a colocalisation analysis could help determine whether the relationship between MDC and DVT/PE is causal as this method estimates whether an exposure and an outcome share a causal top signal in a particular genomic region[@Giambartolomei2014].
 
-This chapter has provided evidence for a an effect of MDC and TARC on platelet function and indicated possible mechanisms of effect. As mentioned in the introduction of the current chapter, there is evidence that patients with obesity have higher circulating levels of MDC[@Safa2016], however the effect of BMI and levels of these chemokines needs to assessed in a larger cohort and using a causal framework. The SOMAScan proteomics panel detects these circulating chemokines, therefore further exploration of the effect of BMI on these chemokines will be presented in Chapter \@ref(BMI-protein-MR) by using one sample MR and Chapter \@ref(BMI-protein-RCT) which utilises a weight loss randomised control trial.
+This chapter has provided evidence for a an effect of MDC and TARC on platelet function and indicated possible mechanisms of effect. As mentioned in the introduction of the current chapter, there is evidence that patients with obesity have higher circulating levels of MDC[@Safa2016], however the effect of BMI and levels of these chemokines needs to assessed in a larger cohort and using a causal framework. The SOMAScan proteomics panel detects these circulating chemokines, therefore further exploration of the effect of BMI on these chemokines will be presented in Chapter \@ref(BMI-protein-MR) by using one sample MR and Chapter \@ref(BMI-protein-RCT) which utilises a weight loss RCT.
 
 ### Conclusions
 
