--- a/index/03-chap3.Rmd
+++ b/index/03-chap3.Rmd
@@ -31,7 +31,7 @@ source("~/OneDrive - University of Bristol/PhD/Main project/Thesis/index/package
 ```
 # Using observational and MR frameworks to determine the effect of body mass index on platelet characteristics {#BMI-platelets-INTERVAL}
 
-This work is published in the journal Platelets[@Goudswaard2022]. I performed all analyses, created all figures and tables and wrote the manuscript. 
+This work is published in the journal Platelets[@Goudswaard2022]. The preprint of this manuscript is also on MedRXiV[@Goudswaard2021a]. I performed all analyses, created all figures and tables and wrote the manuscript. 
 
 ## Background
 The introduction chapter (Chapter \@ref(background)) indicated that clinical studies and genetic association studies have identified BMI as an independent risk factor for thrombotic disorders such as CHD and stroke[@Nordestgaard2012; @Dale2017; @Wolk2003a]. Platelet hyperactivity can be an indicator of those who may be at an increased risk of thrombosis[@Puurunen2018]. There is evidence that people with a higher BMI have hyperactive platelets[@Barrachina2019; @Nardin2015], which could explain why a higher BMI is linked to an increase in thrombosis. Platelet function can be directly assessed by various methods (section \@ref(platelet-function-techniques)), but these techniques are not widely available or readily standardized. Haematology analyzers such as the Sysmex XN series are more commonly used to provide full blood counts, providing detailed readouts of platelet characteristics. Mechanisms of platelet hyperactivity are unclear, but it is possible that alterations in properties of platelets such as PLT, MPV and IPF/IPC may contribute to the phenotype. 
@@ -40,7 +40,7 @@ Immature platelets (also known as reticulated platelets) are the youngest platel
 
 As these platelet characteristics provide potential information about platelet hyperactivity and given the increased thrombotic risk seen with adiposity, it is important to assess how adiposity affects platelet properties. Previous studies with modest samples sizes have implemented observational epidemiological methods to explore the effect of BMI on PLT, plateletcrit (PCT) and MPV. There is conflicting observational evidence regarding an association between BMI and PLT[@Furuncuoglu2016; @Han2018a], with some studies suggesting a positive association between BMI and MPV[@Coban2005] and other studies reporting no such association[@Heffron2018]. Furthermore, as there is evidence that immature platelet production is increased in patients with metabolic syndrome and type II diabetes[@Vaduganathan2008a; @Mijovic2015a], it is therefore important to explore whether BMI may be an independent predictor of this trait. It is currently unknown whether the influence of BMI on platelet properties and function are causal and independent of confounding effects.
 
-In this chapter the aim was to use data from the INTERVAL prospective cohort (N=33388) to explore the association between BMI and platelet traits. Figure \@ref(fig:BMI-platelet-overview) shows the associations of the overall thesis hypothesis addressed in the chapter. Here, observational and Mendelian randomization (MR) approaches were employed to test the hypothesis that higher BMI leads to changes in platelet characteristics. Although observational studies can demonstrate associations between BMI and platelet characteristics, they cannot determine direct causality. To address the latter, MR was employed using a genetic risk score derived from single nucleotide polymorphisms (SNPs) associated with higher BMI (Figure \@ref(fig:Linear-reg-MR)). This allowed estimation of the causal effect of BMI on platelet traits, reducing the effect of confounding factors that are inherent to observational studies. To assess functional implications of BMI-platelet associations, a follow-up analysis was designed to explore the associations between platelet characteristics and whole blood aggregation in a cohort of cardiac surgery patients. 
+In this chapter the aim was to use data from the INTERVAL prospective cohort (N=33388) to explore the association between BMI and platelet traits. Figure \@ref(fig:BMI-platelet-overview) shows the associations of the overall thesis hypothesis addressed in the chapter. Here, observational and Mendelian randomisation (MR) approaches were employed to test the hypothesis that higher BMI leads to changes in platelet characteristics. Although observational studies can demonstrate associations between BMI and platelet characteristics, they cannot determine direct causality. To address the latter, MR was employed using a genetic risk score derived from single nucleotide polymorphisms (SNPs) associated with higher BMI (Figure \@ref(fig:Linear-reg-MR)). This allowed estimation of the causal effect of BMI on platelet traits, reducing the effect of confounding factors that are inherent to observational studies. To assess functional implications of BMI-platelet associations, a follow-up analysis was designed to explore the associations between platelet characteristics and whole blood aggregation in a cohort of cardiac surgery patients. 
 
 (ref:caption-BMI-platelet-overview) **Schematic of the associations explored in the current chapter: the relationship between body mass index and platelet traits.** Figure made using BioRender.com.
 (ref:scaption-BMI-platelet-overview) Schematic of the associations explored in the current chapter: the relationship between body mass index and platelet traits.
@@ -49,8 +49,8 @@ In this chapter the aim was to use data from the INTERVAL prospective cohort (N=
 include_graphics(path = "figure/BMI_platelets/Thesis_graphic_overview_BMI_platelets.png", dpi = NA)
 ```
 
-(ref:caption-Linear-reg-MR) **Schematic of linear regression and Mendelian randomization analyses. Linear regression assesses the association between BMI (exposure) and platelet traits (outcome), with adjustment for potential confounders.** Under the assumptions of Mendelian randomization (MR), the genetic risk score (GRS) for body mass index (BMI) does not associate with confounding variables, and if there is a causal association, the GRS should only associate with platelet outcomes through its association with body mass index.
-(ref:scaption-Linear-reg-MR) Schematic of linear regression and Mendelian randomization frameworks for BMI and platelet trait analyses
+(ref:caption-Linear-reg-MR) **Schematic of linear regression and Mendelian randomisation analyses. Linear regression assesses the association between BMI (exposure) and platelet traits (outcome), with adjustment for potential confounders.** Under the assumptions of Mendelian randomisation (MR), the genetic risk score (GRS) for body mass index (BMI) does not associate with confounding variables, and if there is a causal association, the GRS should only associate with platelet outcomes through its association with body mass index.
+(ref:scaption-Linear-reg-MR) Schematic of linear regression and Mendelian randomisation frameworks for BMI and platelet trait analyses
 
 ```{r Linear-reg-MR, echo = FALSE , fig.cap="(ref:caption-Linear-reg-MR)", out.width = "80%", fig.align = "center", fig.scap = "(ref:scaption-Linear-reg-MR)"}
 include_graphics(path = "figure/BMI_platelets/obsvMRexample.png", dpi = NA)
@@ -59,7 +59,7 @@ include_graphics(path = "figure/BMI_platelets/obsvMRexample.png", dpi = NA)
 ## The INTERVAL study {#INTERVAL-study}
 
 ### Study overview
-INTERVAL is a prospective cohort study that initially aimed to test the safety of reducing the time interval between donation of whole blood in 50,000 participants[@DiAngelantonio2017]. Participants were over the age of 18 years, able to provide informed consent and free from a history of major disease. Participants were recruited between June 11th, 2012 and June 15th, 2014 from 25 National Health Service Blood and Transplant (NHSBT) centres across England. They filled out online questionnaires including self-reported height and weight, smoking status and alcohol consumption. Blood samples were also taken at baseline (before randomization within the study) where full blood counts were obtained. The study was approved by Cambridge East Research Ethics Committee. Permission for data access was provided by the Data Access Committee. Data contains sensitive content and requires permission to use therefore cannot be made publicly available. Access to data needs to be approved by the INTERVAL team www.intervalstudy.org.uk/more-information.
+INTERVAL is a prospective cohort study that initially aimed to test the safety of reducing the time interval between donation of whole blood in 50,000 participants[@DiAngelantonio2017]. Participants were over the age of 18 years, able to provide informed consent and free from a history of major disease. Participants were recruited between June 11th, 2012 and June 15th, 2014 from 25 National Health Service Blood and Transplant (NHSBT) centres across England. They filled out online questionnaires including self-reported height and weight, smoking status and alcohol consumption. Blood samples were also taken at baseline (before randomisation within the study) where full blood counts were obtained. The study was approved by Cambridge East Research Ethics Committee. Permission for data access was provided by the Data Access Committee. Data contains sensitive content and requires permission to use therefore cannot be made publicly available. Access to data needs to be approved by the INTERVAL team www.intervalstudy.org.uk/more-information.
 
 ### Assessment of BMI and covariables
 
@@ -276,13 +276,13 @@ column_spec(1, width = "6cm")  # %>%
  # landscape()
 ```
 
-### Mendelian randomization estimates for the association between BMI and platelet traits
-In the MR analyses, BMI was associated with fewer traits than in the observational analysis (Table \@ref(tab:BMI-platelets-MR), \@ref(fig:BMI-platelet-forest)). The causal estimate for the effect of BMI on SFL was 0.08 SDs per SD increase in BMI (95% CI 0.03 to 0.14, P = 0.003). This estimate was of larger magnitude than the observational estimate. The causal estimate for BMI and IPC was 0.06 SDs per SD increase in BMI (95% CI 0.006 to 0.12, P = 0.03), a similar magnitude of effect to the observational estimate. In the MR analysis, unlike in the observational analysis, the causal estimate did not suggest an effect of BMI on either PCT or PLT. MR estimates did not provide evidence for associations between BMI and other platelet variables. The point estimates were consistently positive, aligning with the positive observational associations seen across the platelet traits. Across all but one (H-IPF) of the platelet phenotypes, differences in directionality of effect comparing observational effects and causal effects predicted by Mendelian randomization were not observed (Figure \@ref(fig:BMI-platelet-forest)).
+### Mendelian randomisation estimates for the association between BMI and platelet traits
+In the MR analyses, BMI was associated with fewer traits than in the observational analysis (Table \@ref(tab:BMI-platelets-MR), \@ref(fig:BMI-platelet-forest)). The causal estimate for the effect of BMI on SFL was 0.08 SDs per SD increase in BMI (95% CI 0.03 to 0.14, P = 0.003). This estimate was of larger magnitude than the observational estimate. The causal estimate for BMI and IPC was 0.06 SDs per SD increase in BMI (95% CI 0.006 to 0.12, P = 0.03), a similar magnitude of effect to the observational estimate. In the MR analysis, unlike in the observational analysis, the causal estimate did not suggest an effect of BMI on either PCT or PLT. MR estimates did not provide evidence for associations between BMI and other platelet variables. The point estimates were consistently positive, aligning with the positive observational associations seen across the platelet traits. Across all but one (H-IPF) of the platelet phenotypes, differences in directionality of effect comparing observational effects and causal effects predicted by Mendelian randomisation were not observed (Figure \@ref(fig:BMI-platelet-forest)).
 The Wu-Hausman test suggested that observational and MR estimates were similar for the majority of platelet traits (P > 0.05), except for measures of platelet count and plateletcrit (P < 0.001) (Table \@ref(tab:BMI-platelets-MR)). 
 
-(ref:caption-BMI-platelets-MR) **Mendelian randomization estimates for the effect of BMI on platelet traits.** Beta coefficient is the change in platelet measure in SDs per SD higher BMI.
+(ref:caption-BMI-platelets-MR) **Mendelian randomisation estimates for the effect of BMI on platelet traits.** Beta coefficient is the change in platelet measure in SDs per SD higher BMI.
 
-(ref:scaption-BMI-platelets-MR) Mendelian randomization estimates for the effect of BMI on platelet traits
+(ref:scaption-BMI-platelets-MR) Mendelian randomisation estimates for the effect of BMI on platelet traits
 
 ```{r BMI-platelets-MR,  echo=FALSE}
 options(knitr.kable.NA = "")
@@ -308,9 +308,9 @@ mytable %>% kable(caption = "(ref:caption-BMI-platelets-MR)", booktabs = TRUE, f
   landscape()
 ```
 
-(ref:caption-BMI-platelet-forest) **Forest plot of the Mendelian randomization (MR) and unadjusted observational estimates for the effect of BMI on platelet traits.** Estimate points are filled where P < 0.05. SFL = side fluorescence, IPC = immature platelet count, H-IPF = high fluorescence immature platelet function, FSC = forward scatter, P-LCR = platelet large cell ratio, PDW = platelet distribution width, MPV = mean platelet volume, PCT = plateletcrit, PLT (I) = platelet count (impedance channel), PLT (F) = platelet count (PLT-F channel), SSC = side scatter.
+(ref:caption-BMI-platelet-forest) **Forest plot of the Mendelian randomisation (MR) and unadjusted observational estimates for the effect of BMI on platelet traits.** Estimate points are filled where P < 0.05. SFL = side fluorescence, IPC = immature platelet count, H-IPF = high fluorescence immature platelet function, FSC = forward scatter, P-LCR = platelet large cell ratio, PDW = platelet distribution width, MPV = mean platelet volume, PCT = plateletcrit, PLT (I) = platelet count (impedance channel), PLT (F) = platelet count (PLT-F channel), SSC = side scatter.
 
-(ref:scaption-BMI-platelet-forest) Forest plot of the Mendelian randomization and unadjusted observational estimates for the effect of BMI on platelet traits
+(ref:scaption-BMI-platelet-forest) Forest plot of the Mendelian randomisation and unadjusted observational estimates for the effect of BMI on platelet traits
 
 ```{r BMI-platelet-forest, out.width="90%", echo = FALSE, fig.cap="(ref:caption-BMI-platelet-forest)", fig.align = "center", fig.scap = "(ref:scaption-BMI-platelet-forest)"}
 include_graphics(path = "figure/BMI_platelets/BMI_platelet_forestplot.pdf", dpi = NA)
